# speer

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  build_bench.ps1  conanfile.py  speer.pc.in  vcpkg.json
.github/workflows/: ci.yml  codeql.yml
cmake/: CodeCoverage.cmake  speer-config.cmake.in
docs/: SECURITY.md  architecture.md
examples/: CMakeLists.txt  advanced_stack_demo.c  chat.c  dht_example.c  echo_server.c  libp2p_kad_bootstrap.c  libp2p_ping.c  libp2p_quic_ping.c  libp2p_tcp_full_session.c  relay_example.c  speer_chat.c
include/: speer.h  speer_libp2p_identify.h  speer_libp2p_kad.h  speer_libp2p_tcp.h
src/: speer_internal.h  speer_internal.h.bak
src/crypto/: aead_aes_gcm.c  aead_chacha.c  aead_iface.h  aes.c  aes.h  aes_aesni.c  aes_armv8.c  aes_vaes.c  bignum.c  bignum.h  chacha_avx2.c  cpu_features.c  cpu_features.h  crypto.c  ecdsa_p256.c  ecdsa_p256.h  ed25519.c  ed25519.h  field25519.c  field25519.h  ghash.c  ghash.h  ghash_clmul.c  ghash_pmull.c  ghash_soft.c  ghash_vpclmul.c  hash_iface.h  noise.c  poly1305_avx2.c  poly1305_neon.c  rsa.c  rsa.h  sha.c  sha2.c  sha_shani.c
src/discovery/: dht.c  dht.h  dht_libp2p.c  dht_libp2p.h  mdns.c  mdns.h
src/infra/: buffer_pool.c  buffer_pool.h  host.c  log.c  log.h  metrics.c  metrics.h  migration.c  migration.h  peer.c  sig_dispatch.c  sig_dispatch.h  socket.c  stream_iface.h  transport.c  transport_iface.h
src/libp2p/: identify.c  identify.h  libp2p_noise.c  libp2p_noise.h  multiaddr.c  multiaddr.h  multistream.c  multistream.h  peer_id.c  peer_id.h  speer_libp2p_identify.c  speer_libp2p_kad.c  speer_libp2p_tcp.c  yamux.c  yamux.h
src/quic/: header_protect.c  header_protect.h  quic_flow.h  quic_pkt.c  quic_pkt.h  quic_tls.c  quic_tls.h
src/relay/: circuit_relay.c  circuit_relay.h  dcutr.c  dcutr.h  relay_client.c  relay_client.h  relay_server.c  relay_server.h
src/tls/: ca_bundle.c  ca_bundle.h  tls13_handshake.c  tls13_handshake.h  tls13_keysched.c  tls13_keysched.h  tls13_record.c  tls13_record.h  x509_libp2p.c  x509_libp2p.h  x509_webpki.c  x509_webpki.h
src/transport/: transport_tcp.c  transport_tcp.h
src/util/: buf_cursor.h  ct_helpers.h  length_prefix.c  length_prefix.h  varint.c  varint.h
src/wire/: asn1.c  asn1.h  packet.c  protobuf.c  protobuf.h  quic_frame.c  quic_frame.h  tls_msg.c  tls_msg.h
tests/: CMakeLists.txt  aead_check.c  asn1_check.c  buf_cursor_check.c  buffer_pool_check.c  chacha_counter_check.c  cpu_features_check.c  dcutr_check.c  dcutr_relay_integration_check.c  dht_check.c  dht_check_negative.c  dht_iterative_check.c  dht_libp2p_check.c  dht_libp2p_stream_check.c  dht_maintenance_check.c  ecdsa_p256_check.c  ed25519_check.c  identify_check.c  integration_echo.c  libp2p_facade_check.c  libp2p_tcp_primitives_check.c  mdns_check.c  multiaddr_peer_id_check.c  multistream_check.c  noise_check.c  packet_check.c  parser_robustness_check.c  poly1305_kat_check.c  protobuf_sha256_check.c  quic_frame_check.c  quic_initial_check.c  quic_pkt_robustness_check.c  relay_client_check.c  relay_libp2p_hop_framing_check.c  relay_public_hop_check.c  rng_failure_check.c  run_tests.ps1  test_aes.c  test_aes_gcm.c  test_chacha20_poly1305.c  (+23 more)
tests/benchmark/: CMakeLists.txt  bench_crypto.c  bench_protocol.c  bench_throughput.c  bench_wire.c
tests/fuzz/: CMakeLists.txt  fuzz_buffer_pool.c  fuzz_crypto.c  fuzz_dht.c  fuzz_mdns.c  fuzz_multistream.c  fuzz_noise.c  fuzz_packet.c  fuzz_peer_id.c  fuzz_protobuf.c  fuzz_quic.c  fuzz_relay.c  fuzz_tls_handshake.c  fuzz_tls_record.c  fuzz_varint.c  fuzz_x509.c  fuzz_yamux.c
tools/: CMakeLists.txt  gen_ca_bundle.py  keygen.c  speer-cli.c
